--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,7 +1,10 @@
 cmake_minimum_required(VERSION 3.0.0)
 project(Codeforces VERSION 0.1.0)
 
-set(CMAKE_CXX_FLAGS "-O2 -Wall -Wpedantic")
+if(NOT MSVC) # Why was this here? I exempted the wierd linker flags
+    set( CMAKE_CXX_FLAGS "-O2 -Wall -Wpedantic")
+endif()
+
 set(CMAKE_SUPPRESS_REGENERATION true)
 
 file(GLOB SOURCE_FILES */*.cpp)
